--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "body-parser": "1.19.0",
     "dotenv": "^8.2.0",
     "express": "4.17.1",
-    "mongoose": "5.9.6"
+    "mongoose": "5.9.6",
+    "swagger-express-router": "^1.0.0",
+    "swagger-jsdoc": "^4.0.0",
+    "swagger-ui": "^3.25.2",
+    "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {},
   "scripts": {
